<resources>
    <string name="app_name">FUNEEstore</string>


    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered!</string>
    <string name="btn_link_to_login">Already registered. Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="signed_out">Signed Out</string>

    <string name="facebook_app_id">499064640741937</string>
    <string name="fb_login_protocol_scheme">fb499064640741937</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="login">Login</string>
    <string name="cart">Cart</string>
    <string name="pdp">Product Description</string>
    <string name="search">Search Results</string>
    <string name="signup">Signup</string>
    <string name="dashboad">Dashboard</string>
    <string name="category">Category</string>



    <string-array name="Animals">
        <item>Select Animal!!</item>
        <item>Lion</item>
        <item>Tiger</item>
        <item>Elephant</item>
        <item>Zebra</item>
        <item>Giraffe</item>
        <item>Deer</item>
    </string-array>


</resources>


